--- a/alpha/accounts/static/styles/accounts/accounts.css
+++ b/alpha/accounts/static/styles/accounts/accounts.css
@@ -713,3 +713,26 @@
     display:none;
 }
 
+.notice-item {
+    margin: 10px;
+    padding: 10px 20px 10px 10px;
+    font-size: 13px;
+    border-radius: 4px;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    color: #468847;
+    position: relative;
+}
+
+.notice-item .close {
+    line-height: 20px;
+    position: relative;
+    right: -18px;
+    top: -9px;
+}
+
+.notice-item a {
+    color: #468847;
+    text-decoration: underline;
+    font-weight: bold;
+}
