--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -42,6 +42,8 @@
     <script src="{{STATIC_URL}}js/accounts/link_venue_to_account.js" type="text/javascript" ></script>
     <script src="{{STATIC_URL}}js/advertising/advertising-images.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/accounts/account.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/notices/notices.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/notices/types/transferring.js" type="text/javascript"></script>
     <script type="text/javascript" src="/facebook-for-turbolinks.js"></script>
 {% endblock %}
 
@@ -123,6 +125,7 @@
             <li data-tab-id="reminder" {% if active_tab == "reminder" %}class="current"{% endif %}><span>Reminder</span></li>
             <li data-tab-id="in-the-loop" {% if active_tab == "in-the-loop" %}class="current"{% endif %}><span>In the Loop</span></li>
             <li data-tab-id="advertising-stats" {% if active_tab == "advertising-stats" %}class="current"{% endif %}><span>Advertising Stats</span></li>
+            <li data-tab-id="notices" {% if active_tab == "notices" %}class="current"{% endif %}><span>Notices</span></li>
         </ul>
         <div class="box{% if active_tab == "account-events" %} visible{% endif %}">
             {% include 'accounts/_account_events_table.html' with events=profile.future_events %}
@@ -138,6 +141,9 @@
         </div>
         <div class="box{% if active_tab == "advertising-stats" %} visible{% endif %} advertising-stats">
             {% include 'advertising/stats/list.html' with campaigns=profile.shared_campaigns %}
+        </div>
+        <div class="box{% if active_tab == "notices" %} visible{% endif %} notices">
+            {% include 'notices/_list.html' with notices=profile.notices %}
         </div>
     </div>
 
