marking event items with venue name after transferring to a venue

--- a/alpha/accounts/static/styles/accounts/accounts.css
+++ b/alpha/accounts/static/styles/accounts/accounts.css
@@ -736,3 +736,9 @@
     text-decoration: underline;
     font-weight: bold;
 }
+
+.venue-title {
+    position: absolute;
+    right: 7px;
+    top: 2px;
+}
