Add archived tab to account page

--- a/alpha/accounts/templates/accounts/_in_the_loop_events_table.html
+++ b/alpha/accounts/templates/accounts/_in_the_loop_events_table.html
@@ -9,6 +9,10 @@
         {% short_single_event event %}
         <div class="clr"></div>
     </div>
+{% empty %}
+    <p>
+        no in the loop events
+    </p>
 {%endfor%}
 </div>
 
