--- a/alpha/accounts/templates/venue_accounts/_venue_featured_events_table.html
+++ b/alpha/accounts/templates/venue_accounts/_venue_featured_events_table.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="entry-details-wrapper">
                         <div class="title">
-                            <a href="{% event_link event %}">
+                            <a href="{% event_link event.event %}">
                                 {{ event.event_day.name }}&nbsp;
                             </a>
                         </div>
