--- a/alpha/notices/templates/notices/notices_block.html
+++ b/alpha/notices/templates/notices/notices_block.html
@@ -1,4 +1,5 @@
 <div class="notices-block">
-    <img src="{{ STATIC_URL }}images/notices-icon.png" />
-    <a class="notices-count" href="{% url 'userena_profile_detail' user.username %}">{{ notice_count }}</a>
+    <a class="notices-count" href="{% url 'userena_profile_detail' user.username %}">
+        {{ notice_count }}
+    </a>
 </div>
