--- a/alpha/accounts/static/styles/accounts/accounts.css
+++ b/alpha/accounts/static/styles/accounts/accounts.css
@@ -713,7 +713,12 @@
     display:none;
 }
 
-.notice-item {
+.notices-list {
+    float: right;
+    width: 435px;
+}
+
+.notice-item, .notice-item-history {
     margin: 10px;
     padding: 10px 20px 10px 10px;
     font-size: 13px;
@@ -722,6 +727,12 @@
     border-color: #d6e9c6;
     color: #468847;
     position: relative;
+}
+
+.notice-item-history {
+    background-color: #dddddd;
+    border-color: #888888;
+    color: #454545;
 }
 
 .notice-item .close {
@@ -738,7 +749,18 @@
 }
 
 .venue-title {
+    color: #ffffff;
     position: absolute;
-    right: 7px;
+    right: 8px;
     top: 2px;
+    background: #022E52;
+    padding: 0 2px;
+}
+
+.venue-title a {
+    color: #ffffff;
+}
+
+.venue-title a:hover {
+    text-decoration: underline;
 }
