--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -114,6 +114,7 @@
                 
                 {% venue_accounts %}
             </div>
+            {% include 'notices/_list.html' with notices=profile.notices %}
             <div class="clr"></div>
         </div>
     </div>
@@ -125,7 +126,7 @@
             <li data-tab-id="reminder" {% if active_tab == "reminder" %}class="current"{% endif %}><span>Reminder</span></li>
             <li data-tab-id="in-the-loop" {% if active_tab == "in-the-loop" %}class="current"{% endif %}><span>In the Loop</span></li>
             <li data-tab-id="advertising-stats" {% if active_tab == "advertising-stats" %}class="current"{% endif %}><span>Advertising Stats</span></li>
-            <li data-tab-id="notices" {% if active_tab == "notices" %}class="current"{% endif %}><span>Notices</span></li>
+            <li data-tab-id="notices" {% if active_tab == "notices" %}class="current"{% endif %}><span>!</span></li>
         </ul>
         <div class="box{% if active_tab == "account-events" %} visible{% endif %}">
             {% include 'accounts/_account_events_table.html' with events=profile.future_events %}
@@ -143,7 +144,7 @@
             {% include 'advertising/stats/list.html' with campaigns=profile.shared_campaigns %}
         </div>
         <div class="box{% if active_tab == "notices" %} visible{% endif %} notices">
-            {% include 'notices/_list.html' with notices=profile.notices %}
+            {% include 'notices/_list_history.html' with notices=profile.notices_history %}
         </div>
     </div>
 
